[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/entities/Insect.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/Insect_moving_0.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/Insect_moving_1.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/LD44_insect_hit.ogg" type="AudioStream" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 2.99011 )

[sub_resource type="CircleShape2D" id=3]
radius = 198.658

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 3.60846 )

[node name="Insect" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 12
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.153889, 0.923336 )
shape = SubResource( 2 )

[node name="DetectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource( 3 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpCooldown" type="Timer" parent="."]
one_shot = true

[node name="DamageRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageRadius"]
position = Vector2( 0.131943, 0.923584 )
shape = SubResource( 4 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_DetectArea_body_exited"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="JumpCooldown" to="." method="_on_JumpCooldown_timeout"]
[connection signal="body_entered" from="DamageRadius" to="." method="_on_DamageRadius_body_entered"]
